--- a/ClientTest/sockettcpclient.ui
+++ b/ClientTest/sockettcpclient.ui
@@ -6,21 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1064</width>
-    <height>539</height>
+    <width>755</width>
+    <height>434</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>SocketTCPClient</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(213, 213, 215);</string>
+   <string notr="true">background-color: rgb(222, 221, 221);   </string>
   </property>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>400</y>
+     <x>340</x>
+     <y>340</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -32,18 +32,18 @@
   <widget class="QTextEdit" name="m_sendTextEdit">
    <property name="geometry">
     <rect>
-     <x>540</x>
-     <y>280</y>
-     <width>191</width>
-     <height>71</height>
+     <x>430</x>
+     <y>270</y>
+     <width>171</width>
+     <height>51</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>300</y>
+     <x>340</x>
+     <y>290</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -55,18 +55,18 @@
   <widget class="QTextEdit" name="m_recvTextEdit_2">
    <property name="geometry">
     <rect>
-     <x>610</x>
-     <y>390</y>
-     <width>191</width>
-     <height>71</height>
+     <x>430</x>
+     <y>330</y>
+     <width>171</width>
+     <height>51</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>770</x>
-     <y>270</y>
+     <x>630</x>
+     <y>340</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -78,7 +78,7 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>200</x>
      <y>0</y>
      <width>471</width>
      <height>81</height>
@@ -106,8 +106,7 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(240, 240, 240);
-border-color: rgb(134, 146, 154);</string>
+    <string notr="true"/>
    </property>
    <property name="title">
     <string>connect target</string>
@@ -161,8 +160,8 @@ border-color: rgb(134, 146, 154);</string>
    <widget class="QPushButton" name="m_connectServerBtn">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>120</y>
+      <x>40</x>
+      <y>110</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -171,18 +170,31 @@ border-color: rgb(134, 146, 154);</string>
      <string>connect</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="m_connectServerBtn_2">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>110</y>
+      <width>101</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>disconnect</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>330</x>
      <y>90</y>
      <width>391</width>
      <height>151</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(134, 146, 154);</string>
+    <string notr="true"/>
    </property>
    <property name="title">
     <string>setting</string>
@@ -190,8 +202,8 @@ border-color: rgb(134, 146, 154);</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>30</y>
+      <x>10</x>
+      <y>40</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -203,8 +215,8 @@ border-color: rgb(134, 146, 154);</string>
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>20</y>
+      <x>50</x>
+      <y>40</y>
       <width>83</width>
       <height>32</height>
      </rect>
@@ -229,7 +241,7 @@ border-color: rgb(134, 146, 154);</string>
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>10</y>
+      <y>30</y>
       <width>101</width>
       <height>21</height>
      </rect>
@@ -241,8 +253,8 @@ border-color: rgb(134, 146, 154);</string>
    <widget class="QLineEdit" name="m_serverPortLineEdit_3">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>10</y>
+      <x>270</x>
+      <y>30</y>
       <width>81</width>
       <height>20</height>
      </rect>
@@ -254,8 +266,8 @@ border-color: rgb(134, 146, 154);</string>
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>90</y>
+      <x>50</x>
+      <y>110</y>
       <width>91</width>
       <height>23</height>
      </rect>
@@ -268,7 +280,7 @@ border-color: rgb(134, 146, 154);</string>
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>40</y>
+      <y>60</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -281,7 +293,7 @@ border-color: rgb(134, 146, 154);</string>
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>40</y>
+      <y>60</y>
       <width>101</width>
       <height>21</height>
      </rect>
@@ -293,8 +305,8 @@ border-color: rgb(134, 146, 154);</string>
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>90</y>
+      <x>220</x>
+      <y>110</y>
       <width>91</width>
       <height>23</height>
      </rect>
@@ -314,7 +326,7 @@ border-color: rgb(134, 146, 154);</string>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(134, 146, 154);</string>
+    <string notr="true"/>
    </property>
    <property name="title">
     <string>temperature data</string>
@@ -371,6 +383,84 @@ border-color: rgb(134, 146, 154);</string>
      <string>0℃</string>
     </property>
    </widget>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>400</y>
+     <width>701</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>70</y>
+     <width>20</width>
+     <height>341</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_3">
+   <property name="geometry">
+    <rect>
+     <x>710</x>
+     <y>70</y>
+     <width>20</width>
+     <height>341</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_5">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>60</y>
+     <width>691</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_4">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>70</y>
+     <width>20</width>
+     <height>341</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_7">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>240</y>
+     <width>701</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
