--- a/ClientTest/sockettcpclient.ui
+++ b/ClientTest/sockettcpclient.ui
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>340</y>
+     <y>280</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>290</y>
+     <y>350</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -203,7 +203,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>40</y>
+      <y>30</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -215,10 +215,10 @@
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>40</y>
-      <width>83</width>
-      <height>32</height>
+      <x>60</x>
+      <y>30</y>
+      <width>81</width>
+      <height>21</height>
      </rect>
     </property>
     <item>
@@ -313,6 +313,19 @@
     </property>
     <property name="text">
      <string>stop</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>60</y>
+      <width>119</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>load stress</string>
     </property>
    </widget>
   </widget>
