--- a/ClientTest/sockettcpclient.ui
+++ b/ClientTest/sockettcpclient.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>755</width>
-    <height>434</height>
+    <width>1386</width>
+    <height>919</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,47 +16,21 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(222, 221, 221);   </string>
   </property>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>280</y>
-     <width>81</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>发送内容：</string>
-   </property>
-  </widget>
   <widget class="QTextEdit" name="m_sendTextEdit">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>270</y>
+     <x>1110</x>
+     <y>80</y>
      <width>171</width>
      <height>51</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>350</y>
-     <width>81</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>接收数据：</string>
-   </property>
-  </widget>
   <widget class="QTextEdit" name="m_recvTextEdit_2">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>330</y>
+     <x>1110</x>
+     <y>140</y>
      <width>171</width>
      <height>51</height>
     </rect>
@@ -65,8 +39,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>340</y>
+     <x>1140</x>
+     <y>200</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -78,8 +52,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>0</y>
+     <x>400</x>
+     <y>-10</y>
      <width>471</width>
      <height>81</height>
     </rect>
@@ -189,7 +163,7 @@
     <rect>
      <x>330</x>
      <y>90</y>
-     <width>391</width>
+     <width>681</width>
      <height>151</height>
     </rect>
    </property>
@@ -328,87 +302,74 @@
      <string>load stress</string>
     </property>
    </widget>
-  </widget>
-  <widget class="QGroupBox" name="groupBox_3">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>270</y>
-     <width>221</width>
-     <height>111</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="title">
-    <string>temperature data</string>
-   </property>
-   <widget class="QLabel" name="label_10">
+   <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>30</y>
-      <width>151</width>
-      <height>31</height>
+      <x>470</x>
+      <y>10</y>
+      <width>221</width>
+      <height>111</height>
      </rect>
     </property>
-    <property name="text">
-     <string>current 485 temper:</string>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
+    <property name="title">
+     <string>temperature data</string>
+    </property>
+    <widget class="QLabel" name="label_10">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>151</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>current 485 temper:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_11">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>30</y>
+       <width>121</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0℃</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_12">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>60</y>
+       <width>151</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>current cpu temper:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_13">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>60</y>
+       <width>121</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0℃</string>
+     </property>
+    </widget>
    </widget>
-   <widget class="QLabel" name="label_11">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>30</y>
-      <width>121</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0℃</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_12">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>60</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>current cpu temper:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_13">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>60</y>
-      <width>121</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0℃</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="Line" name="line">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>400</y>
-     <width>701</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
   </widget>
   <widget class="Line" name="line_2">
    <property name="geometry">
@@ -416,7 +377,7 @@
      <x>20</x>
      <y>70</y>
      <width>20</width>
-     <height>341</height>
+     <height>171</height>
     </rect>
    </property>
    <property name="orientation">
@@ -426,10 +387,10 @@
   <widget class="Line" name="line_3">
    <property name="geometry">
     <rect>
-     <x>710</x>
+     <x>720</x>
      <y>70</y>
      <width>20</width>
-     <height>341</height>
+     <height>171</height>
     </rect>
    </property>
    <property name="orientation">
@@ -441,7 +402,7 @@
     <rect>
      <x>30</x>
      <y>60</y>
-     <width>691</width>
+     <width>1311</width>
      <height>20</height>
     </rect>
    </property>
@@ -455,7 +416,7 @@
      <x>310</x>
      <y>70</y>
      <width>20</width>
-     <height>341</height>
+     <height>171</height>
     </rect>
    </property>
    <property name="orientation">
@@ -466,8 +427,8 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>240</y>
-     <width>701</width>
+     <y>230</y>
+     <width>1311</width>
      <height>20</height>
     </rect>
    </property>
@@ -475,8 +436,39 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
+  <widget class="QChartView" name="widget" native="true">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>270</y>
+     <width>1321</width>
+     <height>611</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="Line" name="line_6">
+   <property name="geometry">
+    <rect>
+     <x>1330</x>
+     <y>60</y>
+     <width>20</width>
+     <height>181</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QChartView</class>
+   <extends>QWidget</extends>
+   <header location="global">qchartview.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
